Hocs 5175: Reduce Aspect complexity.